--- a/README
+++ b/README
@@ -39,3 +39,9 @@ add
 
 Notice, that if you have not loaded the library Matlab will not allow you to quit,
 since it tries to unload the library by calling finish.m
+
+
+To run the testfile use:
+
+	make testcase
+	./testcase
